--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
